# dj-codepostal-fr

./: .bumpversion.cfg  .envrc  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
dj_codepostal_fr/: __init__.py  apps.py  fields.py  models.py  urls.py  utils.py  views.py  widgets.py
dj_codepostal_fr/migrations/: 0001_initial.py  0002_codepostalcompletions_codepostallocation.py
tests/: settings.py  test_utils.py
