[tool.poetry]
name = "dj-codepostal-fr"
version = "0.1.0"
description = ""
authors = ["Jules Waldhart <jules.waldhart@lesoctetslibres.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django-select2 = "^7.10.0"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
coverage = "^6.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
