[tool.poetry]
name = "dj-codepostal-fr"
version = "0.1.0"
description = ""
authors = ["Jules Waldhart <jules.waldhart@lesoctetslibres.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
django-select2 = ">=7.10.0"
django = ">=3.2"

[tool.poetry.dev-dependencies]
pytz = ">=2022.1"
coverage = "^6.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
